# cellnames

./: .gitignore  README.md  setup.sh
contracts/always-success/: Cargo.toml
contracts/always-success/src/: main.rs
deploy/: deployment-info.json  deployment.toml
deploy/migrations/: 2026-04-10-131539.json
extension/: build.js  manifest.json  package-lock.json  package.json  popup.html  resolve.html
extension/src/: background.js  ckb.js  resolve.js
gateway/: package-lock.json  package.json
gateway/src/: config.js  resolver.js  server.js  setup-page.js
protocol/: SPEC.md
sdk/: package-lock.json  package.json
sdk/scripts/: register.js
sdk/src/: domain.js  index.js  records.js
